--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -13,9 +13,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginLeft="68dp"
+        android:layout_marginTop="71dp"
         android:text="用户名:"
         android:textSize="18sp" />
 
@@ -49,10 +49,10 @@
         android:layout_below="@+id/cb_isDriver"
         android:layout_alignStart="@+id/tv_passwd"
         android:layout_alignLeft="@+id/tv_passwd"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="55dp"
-        android:text="登陆" />
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="33dp"
+        android:text="登录" />
 
     <Button
         android:id="@+id/bt_reg"
@@ -67,23 +67,29 @@
 
     <EditText
         android:id="@+id/et_passwd"
-        android:layout_width="wrap_content"
+        android:layout_width="193dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/tv_passwd"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_marginEnd="22dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginBottom="0dp"
         android:ems="10"
         android:hint="请输入密码"
         android:inputType="textPassword" />
 
     <AutoCompleteTextView
         android:id="@+id/attv_username"
-        android:layout_width="wrap_content"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tv_username1"
         android:layout_alignEnd="@+id/cb_isDriver"
         android:layout_alignRight="@+id/cb_isDriver"
         android:layout_alignBottom="@+id/tv_username1"
+        android:layout_marginEnd="-60dp"
+        android:layout_marginRight="-60dp"
+        android:layout_marginBottom="-11dp"
         android:hint="请输入用户名"
         android:popupBackground="@color/colorPrimary"
         android:textSize="18sp" />
